--- a/DemoServicio/Web.config
+++ b/DemoServicio/Web.config
@@ -40,4 +40,25 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="InfoSoapBinding" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="InfoSoapBinding12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://footballpool.dataaccess.eu/data/info.wso"
+        binding="basicHttpBinding" bindingConfiguration="InfoSoapBinding"
+        contract="FootballWS.InfoSoapType" name="InfoSoap" />
+      <endpoint address="http://footballpool.dataaccess.eu/data/info.wso"
+        binding="customBinding" bindingConfiguration="InfoSoapBinding12"
+        contract="FootballWS.InfoSoapType" name="InfoSoap12" />
+    </client>
+  </system.serviceModel>
 </configuration>
